# cpp-ngs-utils-meson

./: .gitignore  README.md  main.cpp  meson.build  setup
src/benchmarks/: meson.build
src/benchmarks/subprojects/: benchmark_ranges_v3.cpp
src/cngs/: vcf.h
src/cpp-ngs-utils/: meson.build  region.cpp  region.h  samplesheet.cpp  samplesheet.h  variant.cpp  variant.h  vcf.cpp  vcf.h
src/data/bams/: small.test.bam.cov.txt
src/data/samplesheets/: SampleSheet.csv
src/tests/: meson.build  test_region.cpp  test_samplesheet.cpp  test_vcf.cpp  utils.h
src/tests/subprojects/: test_abseil.cpp  test_ranges_v3.cpp
src/tools/: meson.build  vcf.cpp
src/tools/vcf/: main.cpp
subprojects/: abseil.wrap  htslib.wrap  lyra.wrap
